--- a/configs/Print/config__33.json
+++ b/configs/Print/config__33.json
@@ -5,5 +5,5 @@
   "defaultCopyright": "",
   "defaultFormat": "PDF",
   "defaultLayout": "MAP_ONLY",
-  "copyrightEditable": true
+  "copyrightEditable": false
 }
